--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lenni-mikael.github.io",
+  "homepage": "https://LenniMikael.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
